# traveler-genetic-parallel

./: .gitignore  CMakeLists.txt  City.cpp  City.h  Main.cpp  README.md  Route.cpp  Route.h  bairros-40000.csv  estados-30.csv  paises-200.csv  planning.txt
database/: bairros-40000.csv  estados-30.csv  municipios-5500.csv  paises-200.csv
src/: City.cpp  City.h  Main.cpp  Route.h
